--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,14 +1,8 @@
 {
-  "home__subtitle": [
-    {
-      "type": 0,
-      "value": "Beach House in Collingwood"
-    }
-  ],
-  "home__title": [
-    {
-      "type": 0,
-      "value": "Entire House"
-    }
-  ]
+  "home__subtitle": {
+    "translation": "Beach House in Collingwood"
+  },
+  "home__title": {
+    "translation": "Entire House"
+  }
 }
