--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,14 +1,8 @@
 {
-  "home__subtitle": [
-    {
-      "type": 0,
-      "value": "在 Collingwood 的海边房"
-    }
-  ],
-  "home__title": [
-    {
-      "type": 0,
-      "value": "房子全景"
-    }
-  ]
+  "home__subtitle": {
+    "translation": "在 Collingwood 的海边房"
+  },
+  "home__title": {
+    "translation": "房子全景"
+  }
 }
