--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,8 +1,4 @@
 {
-  "home__subtitle": {
-    "translation": "Beach House in Collingwood"
-  },
-  "home__title": {
-    "translation": "Entire House"
-  }
+  "home__subtitle": "Beach House in Collingwood",
+  "home__title": "Entire House"
 }
