--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,8 +1,4 @@
 {
-  "home__subtitle": {
-    "translation": "在 Collingwood 的海边房"
-  },
-  "home__title": {
-    "translation": "房子全景"
-  }
+  "home__subtitle": "在 Collingwood 的海边房",
+  "home__title": "房子全景"
 }
